# json-factory

./: .gitignore  .pylintrc  README.MD  pyproject.toml
src/: entities.py  json_parser.py  main.py  parser.py
src/json_factory/: __init__.py  constants.py  entities.py  exceptions.py  parser.py
tests/: test_list_operator.py  test_modifiers.py  test_parser.py  test_range_operator.py  test_standard_json.py
tools/: from_string.py
