[project]
name = "json-factory"
version = "0.1.0"
description = "json-factory is a Python tool for generating multiple JSON objects from a single template using custom placeholders and expansion rules."
authors = [{ name = "Rodrigo Gama"}]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pyright]
executionEnvironments = [
    { root = "tests/", extraPaths = [ "src/" , "tests/helpers/"] },
    { root = "tools/", extraPaths = [ "src/" ] },
    { root = "src/", extraPaths = [ "src/" ] },
]

[tool.pytest.ini_options]
pythonpath = [
  "src/",
]
log_cli=false
log_level="INFO"
log_format="%(message)s | %(levelname)s"
